stunt header no longer padded on mobile

--- a/src/components/CharacterDetail.css
+++ b/src/components/CharacterDetail.css
@@ -92,5 +92,6 @@ article > ul > li {
 
   .stunt-header {
     text-align: center;
+    padding-left: 0px;
   }
 }
